alignment fix

--- a/src/app/components/core/audit-log/audit-log.component.css
+++ b/src/app/components/core/audit-log/audit-log.component.css
@@ -25,7 +25,7 @@ table tbody {
 }
 
 .auto-refresh {
-  margin-right: 10px;
+  margin-right: 30px;
   font-size: 0.75rem;
   color: #363636;
   font-weight: 700;
