--- a/src/app/components/core/notifications/notification-log/notification-log.component.css
+++ b/src/app/components/core/notifications/notification-log/notification-log.component.css
@@ -19,7 +19,7 @@
 }
 
 .auto-refresh {
-  margin-right: 10px;
+  margin-right: 30px;
   font-size: 0.75rem;
   color: #363636;
   font-weight: 700;
