--- a/src/app/components/core/system-log/system-log.component.css
+++ b/src/app/components/core/system-log/system-log.component.css
@@ -33,7 +33,7 @@
 }
 
 .auto-refresh {
-  margin-right: 10px;
+  margin-right: 30px;
   font-size: .75rem;
   color: #363636;
   font-weight: 700;
